# Rego.exe

./: Cargo.toml  ReadMe.txt
src/: main.rs  sysinfo.rs
src/sysinfo/: net.rs  os.rs
src/sysinfo/os/: linux.rs  windows.rs
